Modified old files

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -30,12 +30,12 @@
                 </div>
             </div>
 
-            <hr>
+            <hr class="detail-block text-info">
 
-            <div class="inner cover">
+            <div id="margin-top-block" class="inner cover">
 
                 <!-- Example row of columns -->
-                <div class="row" id="margin-top-block">
+                <div class="row">
                     <h1>Студенты курса PyBursa, поток №_1</h1>
                     <p>
                         <span>
@@ -133,7 +133,16 @@
 
             </div>
 
-            <hr>
+            <hr class="deep-orange-darken-1">
+            <div class="jumbotron">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="hidden"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
