--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -38,7 +38,7 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
         <li><a href="contact.html">Contacts</a></li>
-        <li class="active"><a href="#">Students</a></li>
+        <li class="active"><a href="student_detail.html">Students</a></li>
         
       </ul>      
     </div><!-- /.navbar-collapse -->
