--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,15 +29,15 @@
       <div class="container">
         <div class="row ">
           <ul class="contact-detail2 col-sm-5 pull-left">
-            <li> <i class="fa fa-phone"></i> 38 (096) 469 15 57 </li>
-            <li> <i class="fa fa-envelope-o"></i> daria.mykhalevych@gmail.com </li>
+            <li> <i class="fa fa-phone"> 38 (096) 469 15 57</i>  </li>
+            <li> <i class="fa fa-envelope-o"> daria.mykhalevych@gmail.com</i>  </li>
           </ul>
           <div class="social-links col-xs-12 col-sm-7 pull-right">
             <ul class="social-icons hidden-xs pull-right">
-              <li> <i class="fa fa-facebook-square"></i> </li>
-              <li> <i class="fa fa-twitter"></i></li>
-              <li> <i class="fa fa-pinterest"></i> </li>
-              <li> <i class="fa fa-vk"></i> </li>
+              <li> <i class="fa fa-facebook-square">.</i> </li>
+              <li> <i class="fa fa-twitter">.</i></li>
+              <li> <i class="fa fa-pinterest">.</i> </li>
+              <li> <i class="fa fa-vk">.</i> </li>
               </ul>
           </div>
         </div>
@@ -66,7 +66,7 @@
                   <input placeholder="Введите текст &amp; Нажмите Enter" class="form-control" id="s" name="s" value="" type="text">
                 </div>
               </form>
-              <button class="close"> <i class="fa fa-times"></i> </button>
+              <!--<button class="close"> <i class="fa fa-times"></i> </button>-->
             </div>
           </nav>
         </div>
@@ -272,9 +272,9 @@
         </div>
         <div class="col-xs-12 col-sm-3 touch">
           <h5 class="title">Футер #4</h5>
-          <p> <i class="fa fa-map-marker"></i> <span>Где-то в Харькове... </span></p>
-          <p> <i class="fa fa-phone"></i> <span>+ 38 (096) 469 15 57 </span></p>
-          <p> <i class="fa fa-envelope"></i> <span>daria.mykhalevych@gmail.com </span></p>
+          <p> <i class="fa fa-map-marker"> Где-то в Харькове...</i></p>
+          <p> <i class="fa fa-phone"> 38 (096) 469 15 57</i> </p>
+          <p> <i class="fa fa-envelope"> daria@gmail.com</i> </p>
 
         </div>
       </div>
