--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,8 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default">
+  <div class="container-fluid" style="margin-top: 50px;">
+    <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -46,6 +47,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<ol class="breadcrumb">
+  <li>Contacts</a></li>
+</ol>
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
@@ -82,6 +86,7 @@
         <h4>Phone: 777777777</h4>
       </div>
     </div>
+</div>
 </div>
 
 
