--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,8 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default">
+  <div class="container-fluid" style="margin-top: 50px;">
+    <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -29,7 +30,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">DJ102</a>
+      <a class="navbar-brand" href="http://edx.raccoongang.com/dashboard">DJ102</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,6 +46,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<ol class="breadcrumb">
+  <li>Main</a></li>
+</ol>
   <div class="container">
     <div class="jumbotron">
       <h1 class="description">Description </h1>
@@ -54,6 +58,7 @@
       <p id="topic2">Topic #2</p>
       <p id="topic3">Topic #3</p>
       </div>
+  </div>
   </div>
 
 
