--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -19,7 +19,8 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default">
+  <div class="container-fluid" style="margin-top: 50px;">
+    <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -46,8 +47,17 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+<ol class="breadcrumb">
+  <li><a href="student_list.html">Students</a></li>
+  <li>Vakulenko O.</a></li>
+</ol>
+
+<a href="student_list.html"><button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button></a>
+
 <h1>Vakulenko Olena</h1>
-<img src="../static/images/olena.jpg" alt="olena">
+<img class="img-responsive img-rounded"" src="../static/images/olena.jpg" alt="olena">
+<div class="table-responsive">
   <table class="table table-striped table-hover">
       <caption>Student's card</caption>
         <tbody>
@@ -89,7 +99,8 @@
         </tr>
       </tbody>
     </table>
-
+</div>
+<div class="table-responsive">
     <table class="table table-striped table-hover">
       <caption>Perfirmance</caption>
       <thead>
@@ -121,8 +132,8 @@
         </tr>       
       </tbody>
     </table>
-
-
+</div>
+</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
