--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -19,7 +19,8 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default">
+  <div class="container-fluid" style="margin-top: 50px;">
+    <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -46,6 +47,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<ol class="breadcrumb">
+  <li>Students</a></li>
+</ol>
 <h1>PyBursa</h1>
   <table class="table">
       <caption>Students list</caption>
@@ -96,6 +100,7 @@
         </tr>
       </tbody>
     </table>
+  </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
