--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -72,9 +72,11 @@
 
 	<section class="price-table">
 		<div class="container section-wrapper">
+		<div>
 			<h2 class="section-title black">
 				PyBursa Students table
 			</h2> <!-- /.section-title -->
+		</div>
 		<div class="panel panel-default">
 		<div class="panel-heading">Students List</div>
 
