--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -77,6 +77,7 @@
 				PyBursa Students table
 			</h2> <!-- /.section-title -->
 		</div>
+		<p>SHAVAI TEXT YJE</p>
 		<div class="panel panel-default">
 		<div class="panel-heading">Students List</div>
 
