--- a/templates/index.html
+++ b/templates/index.html
@@ -70,11 +70,11 @@
      </ul>                                                                              
    </td></tr>
 <tr class="tablelist"><td><h3>2</h3></td><td><div class="them"><h3>Строки и итераторы</h3></div></td><td>
-<div class="value">
+<ul class="value">
 <li>работа со строками и итерируемыми типами</li>
 <li>запуск скрипта и параметры </li>
 <li>git http://try.github.com/levels/ </li>
-</div>                                                                              
+</ul>                                                                              
 </td></tr>
 <tr class="tablelist"><td><h3>3</h3></td><td><div class="them"><h3>Функции и модульность</h3></div></td><td>
 <ul class="value">
