--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -73,11 +73,9 @@
 	<section class="price-table">
 		<div class="container section-wrapper">
 		<div>
-			<h2 class="section-title black">
-				PyBursa Students table
-			</h2> <!-- /.section-title -->
+			<h1 class="section-title black">Py-Django Bursa Students</h1> <!-- /.section-title -->
 		</div>
-		<p>SHAVAI TEXT YJE</p>
+		<p>Davai, s'esh ego yje</p>
 		<div class="panel panel-default">
 		<div class="panel-heading">Students List</div>
 
