Close buttons corrections

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -53,7 +53,7 @@
   <li>Vakulenko O.</a></li>
 </ol>
 
-<a href="student_list.html"><button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button></a>
+<a href="student_list.html" class="button close" aria-label="Close"><span aria-hidden="true">&times;</span></a>
 
 <h1>Vakulenko Olena</h1>
 <img class="img-responsive img-rounded"" src="../static/images/olena.jpg" alt="olena">
