--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -58,7 +58,7 @@
               <li> <a href="index.html">Main </a> </li>
               <li> <a href="student_list.html">Students </a> </li>
               <li> <a href="contact.html">Contacts</a> </li>
-              <li> <a style="visibility: visible;" class="search-button" href="#"><i class="icon icon-Search"></i></a> </li>
+              <li> <a style="visibility: visible;" class="search-button" href="#"><i class="icon icon-Search">.</i></a> </li>
             </ul>
             <div style="" class="bg-white hide-show-content no-display header-search-content">
               <form class="navbar-form vertically-absolute-middle">
