--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -58,7 +58,7 @@
               <li> <a href="index.html">Main </a> </li>
               <li> <a href="student_list.html" class="active">Students </a> </li>
               <li> <a href="contact.html">Contacts</a> </li>
-              <li> <a style="visibility: visible;" class="search-button" href="#"><i class="icon icon-Search"></i></a> </li>
+              <li> <a style="visibility: visible;" class="search-button" href="#"><i class="icon icon-Search">.</i></a> </li>
             </ul>
             <div style="" class="bg-white hide-show-content no-display header-search-content">
               <form class="navbar-form vertically-absolute-middle">
@@ -87,7 +87,7 @@
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 pull-right text-right">
             <ul class="breadcrumb">
-              <li> <i class="fa fa-home"> </i> <a href="index.html">Main</a> </li>
+              <li> <i class="fa fa-home">.</i> <a href="index.html">Main</a> </li>
               <li class="active"> Students </li>
             </ul>
           </div>
