--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -70,6 +70,7 @@
 		</div> <!-- /.container -->
 	</section> <!-- /.section-background -->
 
+<div>
 	<section class="price-table">
 		<div class="container section-wrapper">
 		<div>
@@ -125,8 +126,9 @@
     </tr>
   </table>
 </div>
-
-
+</div>
+</section>
+</div>
 <!-- Footer -->
 	<footer>
 		<div class="container">
