--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -30,7 +30,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">DJ102</a>
+      <a class="navbar-brand" href="http://edx.raccoongang.com/dashboard">DJ102</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
