--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -74,9 +74,9 @@
 	<section class="price-table">
 		<div class="container section-wrapper">
 		<div>
-			<h1 class="section-title black">Py-Django Bursa Students</h1> <!-- /.section-title -->
+			<h1 class="section-title black">Py-Django Bursa Students</h1>
+			<p>Text</p> <!-- /.section-title -->
 		</div>
-		<p>Davai, s'esh ego yje</p>
 		<div class="panel panel-default">
 		<div class="panel-heading">Students List</div>
 
