--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -29,10 +29,8 @@
       </button>
       <a class="navbar-brand" href="index.html">Main</a>
       <a class="navbar-brand" href="contact.html">Contacts</a>
-      <a class="navbar-brand" href="#">Students</a>
+      <a class="navbar-brand" href="student_list.html">Students</a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
