--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Main</a>
+      <a class="navbar-brand" href="index.html">Main</a>
       <a class="navbar-brand" href="contact.html">Contacts</a>
       <a class="navbar-brand" href="student_list.html">Students</a>
     </div>
