--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -126,26 +126,31 @@
 
   <!-- Default panel contents -->
   <!-- Table -->
-  <table>
-    <tr>
-    	<td>Course</td>
-    	<td>Week</td>
-    	<td>Control Type</td>
-    	<td>Grade</td>
-    </tr>
-    <tr>
-    	<td>PY101 Введение в Python</td>
-    	<td>Week 1</td>
-    	<td>Tests</td>
-    	<td>99%</td>
-    </tr>
-    <tr>
-    	<td></td>
-    	<td></td>
-    	<td>Problem Task №1</td>
-    	<td></td>
-    </tr>
-  </table>
+      <table class="table table-striped table-bordered">
+      <thead>
+      <tr>
+      <th>Theme</th>
+      <th>Week Number</th>
+      <th>Control Type</th>
+      <th>Problem Task Number</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+      <td>Python for Beginners</td>
+      <td>1</td>
+      <td>Practice Lesson</td>
+      <td>Problem Task #2</td>
+      </tr>
+      <tr>
+      <td>Handling Exceptions</td>
+      <td>2</td>
+      <td>Tests</td>
+      <td>Problem Task #1</td>
+      </tr>
+      </tbody>
+      </table>
+    </div>
 <!-- Footer -->
 	<footer>
 		<div class="container">
