--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -7,8 +7,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Students</title>
 
-
-
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
@@ -21,9 +19,7 @@
     <![endif]-->
   </head>
   <body>
-
-
-      <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
@@ -31,66 +27,61 @@
             </a>
           </div>
             <ul class="nav nav-pills">
-              <li role="presentation"><a class="passive" href="index.html">Main</a></li>
+              <li role="presentation" class="passive"><a href="index.html">Main</a></li>
               <li role="presentation" class="passive"><a href="contact.html">Contacts</a></li>
-              <li role="presentation" class="active"><a>Students</a></li>
+              <li role="presentation" class="active"><a href="contact.html">Students</a></li>
             </ul>
         </div>
-      </nav>
-      <div class="container-fluid">
+    </nav>
+    <div class="container-fluid">
         <div class="jumbotron">
           <h1>Курс PyBursa</h1>
           <p>Ниже представлен список студентов за 2015!</p>
         </div>
-      </div>
-      <div id="spisok">
-            <table class="table table-hover">
-              <thead>
-                  <tr>
-                      <th>No</th>
-                      <th>Surname</th>
-                      <th>Name</th>
-                      <th>Address</th>
-                      <th>Skype</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr>
-                  <td><a href="student_detail.html">1</a></td>
-                      <td>Dallas</td>
-                      <td>Korben</td>
-                      <td>1, The 23rd of August st., Kharkiv city, Ukraine</td>
-                      <td>multipassport</td>
-                  </tr>
-                  <tr>
-                      <td>2</td>
-                      <td>Bond</td>
-                      <td>James</td>
-                      <td>1, Lenina av., Kharkiv city, Ukraine</td>
-                      <td>James.Bond</td>
-                  </tr>
-                  <tr>
-                      <td>3</td>
-                      <td>Petrov</td>
-                      <td>Ivan</td>
-                      <td>1, Pushkinskay st., Kharkiv city, Ukraine</td>
-                      <td>Ivan.Petrov</td>
-                  </tr>
-                  <tr>
-                      <td>4</td>
-                      <td>Ivanov</td>
-                      <td>Sergey</td>
-                      <td>1, Sumskay st., Kharkiv city, Ukraine</td>
-                      <td>Sergey.Ivanov</td>
-                  </tr>
-              </tbody>
-            </table>
-      </div>
-
-
-
-
-
+    </div>
+    <div id="spisok">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>No</th>
+            <th>Surname</th>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Skype</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><a href="student_detail.html">1</a></td>
+            <td>Dallas</td>
+            <td>Korben</td>
+            <td>1, The 23rd of August st., Kharkiv city, Ukraine</td>
+            <td>multipassport</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Bond</td>
+            <td>James</td>
+            <td>1, Lenina av., Kharkiv city, Ukraine</td>
+            <td>James.Bond</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Petrov</td>
+            <td>Ivan</td>
+            <td>1, Pushkinskay st., Kharkiv city, Ukraine</td>
+            <td>Ivan.Petrov</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Ivanov</td>
+            <td>Sergey</td>
+            <td>1, Sumskay st., Kharkiv city, Ukraine</td>
+            <td>Sergey.Ivanov</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
