--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,8 +29,8 @@
             </a>
           </div>
             <ul class="nav nav-pills">
-              <li role="presentation"><a class="passive" href="index.html">Main</a></li>
-              <li role="presentation" class="active"><a>Contacts</a></li>
+              <li role="presentation" class="passive"><a href="index.html">Main</a></li>
+              <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
               <li role="presentation" class="passive"><a href="student_list.html">Students</a></li>
             </ul>
         </div>
