--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link href="../static/css/style.css" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -28,8 +28,8 @@
             </a>
           </div>
             <ul class="nav nav-pills">
-              <li role="presentation" class="active"><a>Main</a></li>
-              <li role="presentation"><a class="passive" href="contact.html">Contacts</a></li>
+              <li role="presentation" class="active"><a href="index.html">Main</a></li>
+              <li role="presentation" class="passive"><a href="contact.html">Contacts</a></li>
               <li role="presentation" class="passive"><a href="student_list.html">Students</a></li>
             </ul>
         </div>
