--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 
   </head>
   <body>
+    <div class="container">
     <nav class="navbar navbar-default">
   <div class="container-fluid">
 
@@ -32,8 +33,12 @@
           <a href="index.html">Main <span class="sr-only">(current)</span></a>
         </li>
 
-        <li class="">
+        <li>
           <a href="contact.html">Contacts <span class="sr-only">(current)</span></a>
+        </li>
+
+        <li>
+          <a href="student_list.html">Students <span class="sr-only">(current)</span></a>
         </li>
 
       </ul>
@@ -46,14 +51,15 @@
   </div>
 </nav>
 
-<header> <h1>JSBursa</h1>
+<header> <h1 ><center>JSBursa</center></h1>
     <h3>Description</h3>
     <p class="bg-info">Рады приветствовать вас на нашем сайте.</p>
   </header>
-  <article class= "color">
-    <h3>Program: Основы Python, Строки и итераторы, Функции и модульность</h3>
+  <article class="color">
+    <h4>Program: Основы Python, строки и итераторы, функции и модульность.</h4>
 
   </article>
+    </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="../static/js/bootstrap.js"></script>
   </body>
