--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,6 +12,7 @@
 
     </head>
   <body>
+  <div class="container">
   <nav class="navbar navbar-default">
       <div class="container-fluid">
 
@@ -27,13 +28,18 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="">
+            <li>
               <a href="index.html">Main <span class="sr-only">(current)</span></a>
             </li>
 
             <li class="active">
               <a href="contact.html">Contacts <span class="sr-only">(current)</span></a>
             </li>
+
+            <li>
+              <a href="student_list.html">Students <span class="sr-only">(current)</span></a>
+            </li>
+
           </ul>
         </div>
     </div>
@@ -76,7 +82,7 @@
 
       </tbody>
   </table>
-
+</div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="../static/js/bootstrap.js"></script>
   </body>
