--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -110,7 +110,7 @@
     	<td>18.11.1994</td>
     </tr>
     <tr>
-    	<td>Adress</td>
+    	<td>Address</td>
     	<td>Kosiora</td>
     </tr>
     <tr>
@@ -120,6 +120,13 @@
     <tr>
     	<td>Skype</td>
     	<td>makaron19941</td>
+    </tr>
+      	<td>Average Grade</td>
+      	<td>4.8</td>
+    </tr>
+    <tr>
+      	<td>Rating</td>
+   		<td>35</td>
     </tr>
   </table>
 </div>
