--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -47,7 +47,7 @@
 
 <table class="table table-hover">
   <tr class="headtable_student"><td><h3>No</h3></td><td><h3>Name</h3></td><td><h3>Surname</h3></td><td><h3>Address</h3></td><td><h3>Skype</h3></td><tr>
-  <tr class="head_study_table"><td><a href="student_detail.html"/>1</td><td><h3>Kostyantin</h3></td><td><h3>Moroz</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>Kostyaf1777</h3></td></tr>
+  <tr class="head_study_table"><td><a href="student_detail.html">1</a></td><td><h3>Kostyantin</h3></td><td><h3>Moroz</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>Kostyaf1777</h3></td></tr>
   <tr class="row_table_student"><td><h3>2</h3></td><td><h3>Sergey</h3></td><td><h3>Pogorelov</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>SergPogorelov</h3></td></tr>
   <tr class="head_study_table"><td><h3>3</h3></td><td><h3>Petro</h3></td><td><h3>Ivanov</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>PeterUa</h3></td></tr>
   <tr class="row_table_student"><td><h3>4</h3></td><td><h3>Aleksandr</h3></td><td><h3>Petrov</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>AlexPetrov</h3></td></tr>
