--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div id="programm">
-        <table>
+        <table class="table table-bordered table-hover">
             <tbody>
               <tr>
                 <th>
