--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -29,7 +29,7 @@
             <ul class="nav nav-pills">
               <li role="presentation" class="passive"><a href="index.html">Main</a></li>
               <li role="presentation" class="passive"><a href="contact.html">Contacts</a></li>
-              <li role="presentation" class="active"><a href="contact.html">Students</a></li>
+              <li role="presentation" class="active"><a href="student_list.html">Students</a></li>
             </ul>
         </div>
     </nav>
