--- a/templates/contact.html
+++ b/templates/contact.html
@@ -82,10 +82,10 @@
 						<img src="../static/images/team-1.png" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
 						</h4>
-						<p class="team-item-id">
+						<h4 class="team-item-id">
 							Founder
-						</p>
-						<ul class="team-item-name">
+						</h4>
+						<ul class="team-item-name-2">
 							<li>Name: David Martin</li>
 							<li>Skype: <i>klaster22</i></li>
 							<li>Email: klaster@freeletter.me</li>
@@ -99,10 +99,10 @@
 						<img src="../static/images/team-2.png" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
 						</h4>
-						<p class="team-item-id">
+						<h4 class="team-item-id">
 							Manager
-						</p>
-						<ul class="team-item-name">
+						</h4>
+						<ul class="team-item-name-2">
 							<li>Name: Lena Scott</li>
 							<li>Skype: <i>lavanda09</i></li>
 							<li>Email: lavanda@freeletter.me</li>
@@ -115,10 +115,10 @@
 						<img src="../static/images/team-3.png" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
 						</h4>
-						<p class="team-item-id">
+						<h4 class="team-item-id">
 							Director
-						</p>
-						<ul class="team-item-name">
+						</h4>
+						<ul class="team-item-name-2">
 							<li>Name: Paul Smith</li>
 							<li>Skype: <i>paul.smt</i></li>
 							<li>Email: paul@freeletter.me</li>
@@ -131,10 +131,10 @@
 						<img src="../static/images/team-4.png" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
 						</h4>
-						<p class="team-item-id">
+						<h4 class="team-item-id">
 							co-founder
-						</p>
-						<ul class="team-item-name">
+						</h4>
+						<ul class="team-item-name-2">
 							<li>Name: Jenifer White</li>
 							<li>Skype: <i>jen.w</i></li>
 							<li>Email: jen.white@freeletter.me</li>
