--- a/static/css/about.css
+++ b/static/css/about.css
@@ -42,3 +42,9 @@
 	text-transform: uppercase;
 	padding-bottom: 30px;
 }
+.team-item-name-2{
+	font-size: 14px;
+	margin-bottom: 0px;
+	padding-top: 20px;
+	text-align: left;
+}
