--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 			<div class="header-table">
 				<div class="header-wrapper">
 					<h1 class="header-title">
-						best python courses
+						PyBursa - best python courses
 					</h1>
 					<p class="header-subtitle">
 						since 2013
@@ -71,7 +71,7 @@
 		</div> <!-- /.container -->
 	</section> <!-- /#header -->
 	
-
+<div>
 <!-- Our Services -->
 	<section class="service" id="service">
 		<div class="container">
@@ -142,7 +142,7 @@
 										 Django first steps 
 									</h3>
 									<p class="section-item-detail">
-										The Earth was small, light blue, and so touchingly alone, our home that must be so painful.
+										The Earth was small, light blue, and so touchingly alone, our home that must be so painful. PyBursa.
 									</p>
 								</div> <!-- /.service-item -->
 							</div>
@@ -168,7 +168,7 @@
 			<div class="quoter">Alexei Radchenko</div>
 		</div> <!-- /.container -->
 	</section> <!-- /.note -->
-
+</div>
 
 <!-- Fan Facts -->
 	<section class="fun">
