--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -79,6 +79,13 @@
             <td>1, Sumskay st., Kharkiv city, Ukraine</td>
             <td>Sergey.Ivanov</td>
           </tr>
+          <tr>
+            <td>5</td>
+            <td>Dallas</td>
+            <td>Lilu</td>
+            <td>1, The 23rd of August st., Kharkiv city, Ukraine<</td>
+            <td>multipassport2</td>
+          </tr>
         </tbody>
       </table>
     </div>
