--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ h1 {font-weight: bold}
 h2 {font-weight: bold}
 h4 {font-weight: bold}
 .names {font-size: 14px; font-weight: bold}
-.prenames {font-size: 20px; font-family: Courier New}
+.container.headline div p {font-size: 20px; font-family: Courier New}
 .data {font-size: 16px; font-family: Courier New}
 .table {border:2px;}
 .name {width: 25%}
