modified html files

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -50,11 +50,11 @@
   </div>
   <table class="table1" style="color:#9932CC">
   <tr>
-    <th>No</th>
-    <th>Surname</th>
-    <th>Name</th>
-    <th>Address</th>
-    <th>Skype</th>
+    <th class="text-capitalize">No</th>
+    <th class="text-capitalize">Surname</th>
+    <th class="text-capitalize">Name</th>
+    <th class="text-capitalize">Address</th>
+    <th class="text-capitalize">Skype</th>
    </tr>
    <tr><td class="list"><a href="student_detail.html">1</a></td><td class="list">Shevchenko</td><td class="list">Igor</td><td class="list">г. Харьков, ул. Клочковская, 220</td><td class="list">i_shev</td></tr>
    <tr><td class="list">2</td><td class="list">Petrenko</td><td class="list">Artem</td><td class="list">г. Харьков, ул. Тимуровцев, 75, кв. 20</td><td class="list">a_petr</td></tr>
