--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,7 +30,7 @@
           </div>
             <ul class="nav nav-pills">
               <li role="presentation" class="passive"><a href="index.html">Main</a></li>
-              <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
+              <li role="presentation" class="active"><a href="../templates/contact.html">Contacts</a></li>
               <li role="presentation" class="passive"><a href="student_list.html">Students</a></li>
             </ul>
         </div>
