Added css styles

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -50,13 +50,13 @@
   </div>
   <table class="table1" style="color:#9932CC">
   <tr>
-    <th class="text-capitalize">No</th>
+    <th class="text-danger">No</th>
     <th class="text-capitalize">Surname</th>
     <th class="text-capitalize">Name</th>
     <th class="text-capitalize">Address</th>
     <th class="text-capitalize">Skype</th>
    </tr>
-   <tr><td class="list"><a href="student_detail.html">1</a></td><td class="list">Shevchenko</td><td class="list">Igor</td><td class="list">г. Харьков, ул. Клочковская, 220</td><td class="list">i_shev</td></tr>
+   <tr><td class="list"><a class="text-info:focus" href="student_detail.html">1</a></td><td class="list">Shevchenko</td><td class="list">Igor</td><td class="list">г. Харьков, ул. Клочковская, 220</td><td class="list">i_shev</td></tr>
    <tr><td class="list">2</td><td class="list">Petrenko</td><td class="list">Artem</td><td class="list">г. Харьков, ул. Тимуровцев, 75, кв. 20</td><td class="list">a_petr</td></tr>
    <tr><td class="list">3</td><td class="list">Smirnova</td><td class="list">Dgylia</td><td class="list">г. Киев, ул. Грушевского, 65, кв. 35</td><td class="list">dg_smirnova</td></tr>
    <tr><td class="list">4</td><td class="list">Davidenko</td><td class="list">Svetlana</td><td class="list">г. Харьков, ул. Садовая, 14, кв. 57</td><td class="list">s_david</td></tr>
