--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,7 @@ h4 {font-weight: bold}
 #spisok {border-radius: 6px; width: 98%; margin: auto}
 #student_detail p {padding-left: 2%; font-size: 36px; font-weight: bold}
 #student_detail h2 {padding-left: 2%}
-#student_detail p img {max-width:75% и height:auto}
+#student_detail p img {max-width:75%; height:auto}
 #student_detail p a {background-color: #1E90FF; font-weight: bold; font-size: 16px}
 #info_company thead tr {background-color: black; font-weight: bold; color:orange}
 #info_company tbody tr {background-color: orange; font-weight: bold}
