--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand">
               <img class="logo" alt="logo" src="../static/images/logo_itbursa.png">
             </a>
           </div>
