--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -28,7 +28,7 @@
 	   }
 	</style>
 	<style>
-		body{background-image: url('../static/images/pic2.jpg') !important;
+		body{background-image: url('../static/images/pic4.jpg') !important;
 		background-repeat: none; 
 		background-attachment: fixed;
 		background-size: 100%; 
@@ -62,15 +62,15 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><a href="index.html">Main</a></li>
-	        <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
-	        <li class="active"><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
+	        <li><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+	        <li><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
 	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
-	</nav>	
+	</nav>
+	<img src="../static/images/pic3.jpg" width="200px" height="200px" class="img-circle">		
 	<div class="jumbotron">
-	  <img src="../static/images/pic3.jpg" width="100px" height="100px" class="img-circle">	
 	  <h1>Ivanova Anna</h1>
 	  <p>Student's card ITBursa</p>
 	   <!-- Table -->
@@ -83,23 +83,20 @@
 	    <tr><td>E-mail</td><td>Anna@ukr.net</td>
 	    <tr><td>Skype</td><td>A.Ivanova</td>	
 	  </table>
-	</div>
-
-	<table class="table">
+	  <table class="table">
 	    <tr>
 	        <th>Course</th>
 	        <th>Week</th>
 	        <th>Control type</th>
 	        <th>Grade</th>
-	        
 	    </tr>
-	    <tr><td>Python</td><td>Wee1</td><td>Problem Task</td><td>100%</td></tr>
+	    <tr><td><b>Python</b></td><td>Wee1</td><td>Problem Task</td><td>100%</td></tr>
 	    <tr><td></td><td>Wee1</td><td>Tests</td><td>100%</td></tr>
 	    <tr><td></td><td>Wee1</td><td>Average Grade</td><td>100%</td></tr>
 	    <tr><td></td><td>Wee1</td><td>Rating</td><td>100%</td></tr>
 	    <tr><td></td><td>Week2</td><td>Problem Task</td><td>100%</td></tr>
 	    <tr><td></td><td>Wee2</td><td>Tests</td><td>100%</td></tr>
-	</table>
+	  </table>
 	</div>
 	<img src="../static/images/img1.gif" width="100px" height="100px">	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
