--- a/templates/index.html
+++ b/templates/index.html
@@ -42,9 +42,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="index.html">Main</a></li>
+        <li><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+        <li><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
