--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -62,7 +62,7 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><a href="index.html">Main</a></li>
-	        <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+	        <li><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
 	        <li class="active"><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
 	        </li>
 	      </ul>
