--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
     <title>Bursa: contacts</title>
     <style>
       body {
-      background-image: url(../static/images/12.jpg) ; /* Путь к фоновому изображению */
+      background-image: url(../static/images/13.jpg) ; /* Путь к фоновому изображению */
       background-color: #c7b39b; /* Цвет фона */
       }
     </style>
@@ -28,7 +28,8 @@
           
             <ul class="nav nav-pills pull-right">
               <li role="presentation"><a href="index.html">Main</a></li>
-              <li role="presentation"  class="active"><a href="contact.html">Contact</a></li>
+              <li role="presentation" class="active"><a href="contact.html">Contact</a></li>
+              <li role="presentation"><a href="student_list.html">Students </a></li>
             </ul>
           
         </nav>
