--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
             <ul class="nav nav-pills pull-right">
               <li role="presentation" class="active"><a href="index.html">Main</a></li>
               <li role="presentation"><a href="contact.html"> Contacts</a></li>
+              <li role="presentation"><a href="student_list.html"> Students</a></li>
             </ul>
           
         </nav>
