--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand">
+            <a class="navbar-brand" href="index.html">
               <img class="logo" alt="logo" src="../static/images/logo_itbursa.png">
             </a>
           </div>
@@ -83,7 +83,7 @@
             <td>5</td>
             <td>Dallas</td>
             <td>Lilu</td>
-            <td>1, The 23rd of August st., Kharkiv city, Ukraine<</td>
+            <td>1, The 23rd of August st., Kharkiv city, Ukraine</td>
             <td>multipassport2</td>
           </tr>
         </tbody>
