--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -88,10 +88,11 @@
                     </div>
                 </div>
         <div class="container">
-          <div class="jumbotron">          
+          <div class="jumbotron">    
+                <h3>Course :   Py 101 введение в Python</h3>  
                     <div class="table">
                         <table class="table">
-                          <h3>Course :   Py 101 введение в Python</h3>
+                          
                             <tbody>
                                 <tr>
                                     <th>Week</th>
@@ -126,6 +127,14 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="hide">
+      <ul class="list-group">
+        <li class="list-group-item list-group-item-success">Dapibus ac facilisis in</li>
+        <li class="list-group-item list-group-item-info">Cras sit amet nibh libero</li>
+        <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
+        <li class="list-group-item list-group-item-danger">Vestibulum at eros</li>
+      </ul>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
