--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -42,7 +42,7 @@
 
     <div class= "container">
       <div class="jumbotron">
-        <h2>Студенты курса PyBursa </h2>
+        <h2>Студенты курса PyBursa</h2>
             <h6>начало занятий 19, 2015</h6>
       </div>
         <div class="container">
@@ -100,6 +100,15 @@
             </div>
           </div>
         </div>
+
+    <div class="hide">
+      <ul class="list-group">
+        <li class="list-group-item list-group-item-success">Dapibus ac facilisis in</li>
+        <li class="list-group-item list-group-item-info">Cras sit amet nibh libero</li>
+        <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
+        <li class="list-group-item list-group-item-danger">Vestibulum at eros</li>
+      </ul>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
