--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,7 +28,7 @@
           
             <ul class="nav nav-pills pull-right">
               <li role="presentation"><a href="index.html">Main</a></li>
-              <li role="presentation" class="active"><a href="contact.html">Contact</a></li>
+              <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
               <li role="presentation"><a href="student_list.html">Students </a></li>
             </ul>
           
