--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,6 +26,7 @@
 		  <ul class="nav navbar-nav">
 		    <li><a href="index.html">Main</a></li>
 		    <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+        <li><a href="student_list.html">Students</a></li>
 		  </ul>
 		</div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -68,9 +69,9 @@
       <div class="caption">
         <h3>Director</h3>
         <p>Name: <span><b>Alexey Radchenko</b></span></p>
-		<p>Skype: <span><b>alexey.radchenko</b></span></p>
-		<p>Email: <span><b>alexey.radchenko@gmail.com</b></span></p>
-		<p>Phone: <span><b>+3809567192639</b></span></p>
+				<p>Skype: <span><b>alexey.radchenko</b></span></p>
+				<p>Email: <span><b>alexey.radchenko@gmail.com</b></span></p>
+				<p>Phone: <span><b>+3809567192639</b></span></p>
       </div>
     </div>
   </div>
