--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -2261,11 +2261,7 @@ caption {
 th {
   text-align: left;
 }
-.table {
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 20px;
-}
+
 .table > thead > tr > th,
 .table > tbody > tr > th,
 .table > tfoot > tr > th,
@@ -2322,7 +2318,7 @@ th {
   background-color: #f9f9f9;
 }
 .table-hover > tbody > tr:hover {
-  background-color: #f5f5f5;
+  background-color: #528b8b;
 }
 table col[class*="col-"] {
   position: static;
@@ -4541,11 +4537,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color: #ecf0f1;
+  border-color: #ecf0f1;
 }
 .navbar-default .navbar-brand {
-  color: #777;
+  color: #ecf0f1;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
@@ -5271,7 +5267,7 @@ a.thumbnail.active {
 .media-right,
 .media-body {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
 }
 .media-middle {
   vertical-align: middle;
