--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,8 +44,9 @@
         </div>
     </div>
   </nav>
-
-<table class="table table-striped">
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+    <table class="table table-striped">
       <thead>
         <tr>
           <th></th>
@@ -81,7 +82,9 @@
         </tr>
 
       </tbody>
-  </table>
+      </table>
+    </div>
+  </div>
 </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="../static/js/bootstrap.js"></script>
