--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,9 @@
   </div>
 </nav>
 
-<header> <h1 ><center>JSBursa</center></h1>
-    <h3>Description</h3>
+<header>
+  <h1 class= "text-center">JSBursa</h1>
+    <h3 class="color3">Description</h3>
     <p class="bg-info">Рады приветствовать вас на нашем сайте.</p>
   </header>
   <article class="color">
