--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -52,7 +52,7 @@
     <p><img src="../static/images/bondarenko.jpg"></p>
 
     <h4 class="bg-info">Информация о студенте</h4>
-    <p>Student's card</p>
+    <p class="color4">Student's card</p>
 </header>
 
 <table class="table table-hover size">
@@ -167,7 +167,6 @@
 </div>
       </tbody>
     </table>
-<p> </p>
   </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="../static/js/bootstrap.js"></script>
