--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -46,7 +46,7 @@
   </nav>
 
 <header> <h1 class="bg-info">Студенты курса JSBursa</h1>
-  <p>Ниже представлен список студентов, выпуск - декабрь 2015.</p>
+  <p class="color2">Ниже представлен список студентов, выпуск - декабрь 2015.</p>
 </header>
 <div class="panel panel-info">
     <table class="table table-striped">
